kubernetes/moex-stock-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moex-stock-api-deployment
  labels:
    app: moex-stock-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: moex-stock-api
  template:
    metadata:
      labels:
        app: moex-stock-api
        visualize: "true"
    spec:
      containers:
        - name: moex-stock-api-pod
          image: dankosik/moex-stock-api
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    visualize: "true"
  name: moex-stock-api-service
spec:
  selector:
    app: moex-stock-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
