kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
    - host: dankos.com
      http:
        paths:
          - pathType: Prefix
            path: /moex-stock-api
            backend:
              service:
                name: moex-stock-api-service
                port:
                  number: 80
